[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["blocking"] }
regex = { version = "1.5.4" }
itertools = { version = "0.10.3" }
json = { version = "0.12.4" }
colored = { version = "2.0.0" }
dotenv = "0.15.0"

# libs

[lib]
path = "lib.rs"
